third_party/move/move-compiler-v2/tests/checking/friends/friend_different_addresses.move
module 0xc0ffee::m {
    friend 0xdeadbeef::n;
    public fun test() {}
}

module 0xdeadbeef::n {
    public fun test() {}
}
